--- a/index.html
+++ b/index.html
@@ -11,16 +11,22 @@
     <title>Biotop Aquascape</title>
 </head>
 <body>
-    <div class="banner-image">
+        <div class="banner-image">
         <div class="nav-bar">
-            <img src="assets/images/logo.png" alt="Biotop Aquascaping logo" class="logo">
+            <a href="index.html">
+                <img src="assets/images/logo.png" alt="Biotop Aquascaping logo" class="logo">
+            </a>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Benefits</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+        </div>
+        <div class="maintext">
+            <h1>Create your unique place of <br>serenity</h1>
+            <p>A biotope aquascape replicates every aspect of the natural version <br>from the fish and flora to the water temperature and chemistry.</p>
         </div>
     </div>
 </body>
