Create button and add style to it

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
         <div class="maintext">
             <h1>Create your unique place of <br>serenity</h1>
             <p>A biotope aquascape replicates every aspect of the natural version <br>from the fish and flora to the water temperature and chemistry.</p>
+            <div>
+                <button type="button"><span></span>Contact us</button>
+            </div>
         </div>
+        <footer>text</footer>
     </div>
+    
 </body>
 </html>
