--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Biotop Aquascape</title>
 </head>
-<body>
-        <div class="banner-image">
-        <div class="nav-bar">
+<body class="banner-image">
+    <section>  
+    <div class="nav-bar">
             <a href="index.html">
                 <img src="assets/images/logo.png" alt="Biotop Aquascaping logo" class="logo">
             </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Services</a></li>
                 <li><a href="#">Benefits</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
@@ -28,11 +27,28 @@
             <h1>Create your unique place of <br>serenity</h1>
             <p>A biotope aquascape replicates every aspect of the natural version <br>from the fish and flora to the water temperature and chemistry.</p>
             <div>
-                <button type="button"><span></span>Contact us</button>
+                <button type="button"><span></span>Services</button>
             </div>
         </div>
-        <footer>text</footer>
-    </div>
-    
+</section>  
+<footer>
+    <ul class="social-links">
+        <li>
+            <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+        </li>
+        <li>
+            <a href="http://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+        </li>
+        <li>
+            <a href="http://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a>
+        </li>
+        <li>
+            <a href="http://Instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+        </li>
+    </ul>
+</footer>
+
+<!-- font awesome script -->
+<script src="https://kit.fontawesome.com/333c0c2f48.js" crossorigin="anonymous"></script>
 </body>
 </html>
